fix: layout issues in dashboard
- Button className passthrough (incorrect buttons shown...)
- notice spacing

--- a/apps/frontend/src/styles/sass/dashboard/components/layout.scss
+++ b/apps/frontend/src/styles/sass/dashboard/components/layout.scss
@@ -58,6 +58,12 @@
     display: flex;
     justify-content: space-between;
 
+    .appointment-notice--success,
+    .appointment-notice--error {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
     &.only-on-mobile {
       height: auto;
       flex-direction: column;
